# rustos

./: .gitignore  README.md  rust-toolchain.toml
boot/: Cargo.toml  Makefile
boot/.cargo/: config.toml
boot/src/: init.rs  main.rs
boot/src/init/: init.s
ext/: config.txt
ext/debug/: debug.gdb  jlink.cfg  rpi3.cfg  start-ocd.sh
kern/: Cargo.toml  Makefile
kern/.cargo/: config.toml
kern/debug/: debug.gdb
kern/src/: allocator.rs  console.rs  init.rs  main.rs  mutex.rs  shell.rs
kern/src/allocator/: bin.rs  bump.rs  linked_list.rs  tests.rs  util.rs
kern/src/init/: init.s  panic.rs
lib/pi/src/: common.rs  gpio.rs  timer.rs  uart.rs
lib/pi/src/atags/: atag.rs  mod.rs  raw.rs
lib/shim/: Cargo.toml
lib/shim/src/: lib.rs
lib/shim/src/no_std/ffi/: os_str_bytes.rs
lib/stack-vec/src/: lib.rs
lib/ttywrite/: Cargo.toml
lib/ttywrite/src/: main.rs  parsers.rs
lib/volatile/src/: traits.rs
lib/xmodem/src/: lib.rs
tut/1-blinky/phase3/: .gitignore  Makefile
tut/1-blinky/phase4/src/: main.rs
tut/c-blink/: blinky.c  init.S
tut/r-blink/: Cargo.toml  Makefile
tut/r-blink/src/: init.rs  main.rs
